tests/error/comprehension_errors/borrow_leaked3.err
Error: Drop violation (at $FILE:12:18)
   | 
10 | @guppy
11 | def foo(qs: list[qubit] @owned) -> list[int]:
12 |     return [0 for q in qs if bar(q)]
   |                   ^ Variable `q` with non-droppable type `qubit` may be leaked
   |                     ...
   | 
12 |     return [0 for q in qs if bar(q)]
   |                              ------ if this expression is `False`

Guppy compilation failed due to 1 previous error
